--- a/22-11-21/tailwind-prace/public/index.html
+++ b/22-11-21/tailwind-prace/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="object-fit: cover;">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
